--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -127,10 +127,13 @@ disconnected optionally, depending on current job properties.
 
 
 
-** TODO [#C] Fleeting Notes elaboration
-SCHEDULED: <2022-11-04 Fri>
+** TODO [#B] Fleeting Notes elaboration
+SCHEDULED: <2022-11-07 Mon>
 :PROPERTIES:
 :CATEGORY: Old Notes
+:END:
+:LOGBOOK:
+CLOCK: [2022-11-06 Sun 12:50]--[2022-11-06 Sun 13:06] =>  0:16
 :END:
 
 Hide and seek game inside all my projects
@@ -209,7 +212,7 @@ How to grow your audience
 Monetisation
 
 ** RAW Internal and external
-SCHEDULED: <2022-11-04 Fri>
+SCHEDULED: <2022-11-07 Mon>
 - Note taken on [2022-11-04 Fri 10:47] \\
   This is the first sample of innate ~Org~ =Note=
 [[info:org#Link Format][links for Zettelkasten]]
