--- a/2022-11-07-cultural-differences.org
+++ b/2022-11-07-cultural-differences.org
@@ -18,13 +18,20 @@ tags: [slaves, masters]
 #+TODO: TODO ACTIVE | DONE
 
 * TODO [#C] Intro
-SCHEDULED: <2022-11-08 Tue>
+SCHEDULED: <2022-11-09 Wed .+1d>
+:PROPERTIES:
+:LAST_REPEAT: [2022-11-08 Tue 20:58]
+:END:
+- State "DONE"       from "ACTIVE"     [2022-11-08 Tue 20:58]
+:LOGBOOK:
+CLOCK: [2022-11-08 Tue 16:32]--[2022-11-08 Tue 16:40] =>  0:08
+:END:
 
 Cultural differences due to artificial selection in human population
-in Western and Eastern Europe.
+in Western and Eastern Europe. 
 
 The pledge of succeeding in close, autocratic and enslaved population
-isn't some protruding qualities as experience, physical strength etc,
-but loyal and meek behavior.
+isn't some eminent qualities or faculties such as experience, physical
+strength etc, but loyal, submissive and meek /behavior/. 
 
 Discrepancy
