--- a/2022-01-27-cognitive-biases.org
+++ b/2022-01-27-cognitive-biases.org
@@ -215,7 +215,7 @@ on records played in reverse.
 #+end_quote
 
 ** RAW Availability heuristic
-SCHEDULED: <2022-11-12 Sat .+3d/4d>
+SCHEDULED: <2022-11-16 Wed .+3d/4d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-11-09 Wed 19:00]
 :END:
@@ -294,11 +294,12 @@ the tendency to underestimate the duration taken to traverse
 oft-travelled routes and overestimate the duration taken to traverse
 less familiar routes.
 
-** INIT Cognitive dissonance
-SCHEDULED: <2022-11-11 Fri .+2d/3d>
+** RAW Cognitive dissonance
+SCHEDULED: <2022-11-17 Thu .+2d/3d>
 :PROPERTIES:
-:LAST_REPEAT: [2022-11-09 Wed 18:58]
+:LAST_REPEAT: [2022-11-15 Tue 07:48]
 :END:
+- State "MAYBE"      from "ACTIVE"     [2022-11-15 Tue 07:48]
 - State "MAYBE"      from "ACTIVE"     [2022-11-09 Wed 18:58]
 :LOGBOOK:
 CLOCK: [2022-11-09 Wed 18:11]--[2022-11-09 Wed 18:22] =>  0:11
