--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -106,7 +106,10 @@ Separate set of bookmarks for each task
 * Average modes
 
 ** INIT Task management
-SCHEDULED: <2022-11-16 Wed>
+SCHEDULED: <2022-11-18 Fri>
+- Note taken on [2022-11-16 Wed 17:26] \\
+  So it is neccessary to re-order =TODO= files and switch *Org-Agenda* on
+  them.
 :LOGBOOK:
 CLOCK: [2022-11-15 Tue 19:02]--[2022-11-15 Tue 19:17] =>  0:15
 CLOCK: [2022-11-15 Tue 19:02]--[2022-11-15 Tue 19:02] =>  0:00
