--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -14,7 +14,7 @@ tags: [data gathering, data elaboration, notetaking]
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
 #+CATEGORY: Workflow
-#+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
+#+TODO: RAW INIT TODO ACTIVE | DONE
 
 * Preamble
 
@@ -105,8 +105,12 @@ Separate set of bookmarks for each task
 
 * Average modes
 
-** INIT Task management
-SCHEDULED: <2022-11-18 Fri>
+** RAW Task management
+SCHEDULED: <2022-11-22 Tue .+4d/5d>
+:PROPERTIES:
+:LAST_REPEAT: [2022-11-18 Fri 07:32]
+:END:
+- State "MAYBE"      from "ACTIVE"     [2022-11-18 Fri 07:32]
 - Note taken on [2022-11-16 Wed 17:26] \\
   So it is neccessary to re-order =TODO= files and switch *Org-Agenda* on
   them.
@@ -152,8 +156,12 @@ The most effective way to get rid of obvious litter is to kill them by
 ~C-k~ directly in the *Org-Agenda* buffer. It is the straight path to
 ~Ktulkh~.
 
-** ACTIVE Data gathering
-SCHEDULED: <2022-11-17 Thu>
+** RAW Data gathering
+SCHEDULED: <2022-11-23 Wed .+5d/6d>
+:PROPERTIES:
+:LAST_REPEAT: [2022-11-18 Fri 07:33]
+:END:
+- State "MAYBE"      from "ACTIVE"     [2022-11-18 Fri 07:33]
 :LOGBOOK:
 CLOCK: [2022-11-16 Wed 07:10]--[2022-11-16 Wed 07:36] =>  0:26
 :END:
@@ -166,10 +174,10 @@ captured and stored.
 [[info:org#Capture templates][org#Capture templates]]
 
 ** RAW Data elaboration
-SCHEDULED: <2022-11-17 Thu>
+SCHEDULED: <2022-11-19 Sat>
 
 ** RAW Meta-analysys
-SCHEDULED: <2022-11-17 Thu>
+SCHEDULED: <2022-11-19 Sat>
 
 ~C-h l~ history of Emacs' commands 
 
