--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -105,7 +105,7 @@ Separate set of bookmarks for each task
 
 * Average modes
 
-** RAW Task management
+** INIT Task management                                            :ARCHIVE:
 SCHEDULED: <2022-11-22 Tue .+4d/5d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-11-18 Fri 07:32]
@@ -156,8 +156,8 @@ The most effective way to get rid of obvious litter is to kill them by
 ~C-k~ directly in the *Org-Agenda* buffer. It is the straight path to
 ~Ktulkh~.
 
-** RAW Data gathering
-SCHEDULED: <2022-11-23 Wed .+5d/6d>
+** INIT [#B] Data gathering
+SCHEDULED: <2022-11-22 Tue .+5d/6d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-11-18 Fri 07:33]
 :END:
@@ -173,16 +173,20 @@ captured and stored.
 
 [[info:org#Capture templates][org#Capture templates]]
 
-** RAW Data elaboration
-SCHEDULED: <2022-11-19 Sat>
+** INIT Data elaboration
+SCHEDULED: <2022-11-24 Thu>
 
 ** RAW Meta-analysys
-SCHEDULED: <2022-11-19 Sat>
+SCHEDULED: <2022-11-24 Thu .+1w>
+:PROPERTIES:
+:CATEGORY: Meta
+:END:
 
 ~C-h l~ history of Emacs' commands 
+~agenda-log-mode~
 
 ** RAW Archiving
-SCHEDULED: <2022-11-20 Sun .+1w>
+SCHEDULED: <2022-11-25 Fri .+1w>
 :PROPERTIES:
 :LAST_REPEAT: [2022-11-13 Sun 09:40]
 :END:
