--- a/2022-11-09-star-warmth.org
+++ b/2022-11-09-star-warmth.org
@@ -17,8 +17,8 @@ tags: [sensuality, sentimentality]
 #+TODO: RAW INIT | MAYBE
 #+TODO: TODO ACTIVE | DONE
 
-* INIT [#C] Prelude
-SCHEDULED: <2022-11-19 Sat .+2d/3d>
+* INIT [#C] Prelude                                                 :ARCHIVE:
+SCHEDULED: <2022-11-22 Tue .+2d/3d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-11-15 Tue 08:34]
 :END:
