--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -105,8 +105,8 @@ Separate set of bookmarks for each task
 
 * Average modes
 
-** ACTIVE Task management
-SCHEDULED: <2023-04-20 Thu .+4d/5d>
+** TODO Task management
+SCHEDULED: <2023-07-10 Mon .+4d/5d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-12-03 Sat 09:27]
 :CATEGORY: Manage
@@ -176,7 +176,7 @@ The most effective way to get rid of obvious litter is to kill them by
 ~Ktulkh~.
 
 ** INIT [#B] Data gathering
-SCHEDULED: <2023-05-05 Fri .+3d/4d>
+SCHEDULED: <2023-06-26 Mon .+3d/4d>
 :PROPERTIES:
 :LAST_REPEAT: [2022-11-25 Fri 07:29]
 :END:
@@ -207,10 +207,10 @@ So, the common types of notes would be:
 [[info:org#Capture templates][org#Capture templates]]
 
 ** INIT Data elaboration
-SCHEDULED: <2023-04-25 Tue>
+SCHEDULED: <2023-06-22 Thu>
 
 ** INIT [#B] Meta-analysys
-SCHEDULED: <2023-05-03 Wed .+1w>
+SCHEDULED: <2023-07-04 Tue .+1w>
 :PROPERTIES:
 :CATEGORY: Meta
 :END:
