--- a/2023-06-21-68-bits-of-unsolicited-advice.org
+++ b/2023-06-21-68-bits-of-unsolicited-advice.org
@@ -15,3 +15,257 @@ tags: [advice, wit, wisdom]
 #+PROPERTY:header-args :results output :exports both :eval no-export
 #+CATEGORY: Advice
 #+TODO: TODO ACTIVE | DONE
+* Greeting
+Hi I'm Kevin Kelly and recently I turned 68 so I thought I would pull
+up this rocking chair and sit in it and dispense some unsolicited
+advice to young people.
+
+/And that's what I'm about to do here are 68 bits of advice./
+
+
+* Learn how to learn
+from those who disagree with you or even offend you see if you can
+find truth in what they believe.
+* Being enthusiastic
+is worth 25 IQ points
+* Always demand a deadline
+and deadlines sweeps out extraneous in the ordinary and that prevents
+you from trying to make it perfect so you have to make it different
+different is much better
+* Don't be afraid to ask a question
+that may sound stupid because 99% of the time everyone else is
+thinking of that same question and is too embarrassed to ask it
+* Being able to listen well
+is a superpower while listening to someone you love keep asking them
+is there more until there is no more a worthy goal for years to learn
+enough about a subject so that you can't believe how ignorant you were
+a year earlier
+* Gratitude will unlock all
+other virtues and is something you can get better at treating a person
+to a meal
+* Never fails and is so easy to do
+it's powerful with old friends and it's a great way to make new
+friends
+* Don't trust all-purpose glue
+* Reading to your children regularly
+will bond you together and will kick-start their imaginations
+* Never use a credit card for credit
+the only kind of credit or debt that's acceptable is debt to acquire
+something whose value and will increase over time like a house
+* The exchange value of most things
+diminishes or vanishes the moment you purchase the so don't be in debt
+to losers
+* Pros are just amateurs
+who know how to gracefully recover from their mistakes
+* Extraordinary claims should require
+extraordinary evidence to be believed
+* Don't be the smartest person in the room
+hang out with and learn from people smarter than yourself even better
+find smart people who will disagree with you
+* Rule of three in conversation
+to get to the real reason ask a person to go deeper than what they
+have just said then again and then once more the third times answer is
+close to the truth
+* Don't be the best be the only
+everyone is shy other people are waiting for you to introduce yourself
+to them they want you to send them an email they are waiting for you
+to ask them on a date so go ahead
+* Don't take it personally
+when someone turns you down assume they are
+just like you occupied distracted
+* Try again later
+it's amazing how often a
+second try works the purpose of the
+habit is to remove that action from self
+negotiation you no longer expend energy
+deciding whether to do it you just do it
+good habits can range from telling the
+truth to flossing promptness is a sign
+of respect when you're young spend at
+least six months to one year living as
+poor as you can
+owning as little as you possibly can
+eating beans and rice in a tiny room or
+tent to experience what your worst life
+style may be that way
+when you have something in the future
+that you want at risk you won't be
+afraid of the worst-case scenario
+trust me there is no them the more there
+you are interested in other
+the more interesting they find you so to
+be interesting be interested optimize
+your generosity no one on their deathbed
+has ever regretted giving away too much
+to make something good just do it to
+make something great just redo it redo
+it redo it the secret to making fine
+things is in remaking them the golden
+rule will never fail you it is the
+foundation of all the other virtues if
+you're looking for something in your
+house and then you finally find it when
+you're done with it don't put it back
+where you found it put it back where you
+first looked for it saving money and
+investing money are good habits small
+amounts of money invested very regularly
+for many decades without deliberation is
+one path to wealth to make mistakes as
+human to own your mistakes is divine
+nothing elevates a person higher than
+quickly admitting and taking personal
+responsibilities for the mistakes that
+you make and then fixing them fairly if
+you mess up fess up it's astounding how
+powerful this ownership is never get
+involved in land war in Asia you can
+obsess about serving your customers
+clients audiences or you can obsess
+about beating the competition both work
+but of the two obsessing about your
+customers will take you much further
+show up keep showing up somebody's
+successful once said 99% of success is
+just showing up separate the process of
+creation from improving you can't write
+and edit or sculpt and polish or make
+and analyze at the same time if you do
+the editor stops the creator while you
+invent don't select while you sketch
+don't inspect while you're right there
+straf don't reflect at the start the
+creator mining must be Unleashed from
+judgment if you're not falling down
+occasionally you're just coasting
+perhaps the most counterintuitive truth
+of the universe is that the more you
+give to others the more you'll get
+understanding that is the beginning of
+wisdom friends are better than money
+almost anything that money can do
+friends can do better in so many ways a
+friend with a boat is better than owning
+about this is true it is hard to cheat
+an honest man when an object has lost
+none 9 percent of the time it is hiding
+within arm's reach of where it was last
+seen so search in all possible locations
+in that radius and you'll find it you
+are what you do not what you say not
+what you believe and not how you vote
+but what you spend your time on if you
+lose or forget to bring a cable and
+adapter or charger check with your hotel
+most hotels have a drawer full of cables
+and doctors and chargers that others
+have left behind and probably have the
+one that you want if you can claim it
+after you borrow it hitch it is a curse
+that does not affect the hated it only
+affects the hater
+so release a grudge as this as if it was
+poison there is no limit on better town
+is unevenly distributed but there is no
+limit on how much we can do with what we
+start with be prepared when you are 90%
+done any large project like a house a
+film an event a nap the rest of the
+myriad details will take on second 90%
+to complete when you die you take
+absolutely nothing with you except your
+reputation before you are old at
+as many funerals as you can bear and
+listen nobody talks about the departed's
+achievements the only thing people
+mentioned is what kind of person you
+were
+while you were achieving for every
+dollar you spend purchasing something
+substantial expect to pay $1 in repairs
+maintenance or disposal by the end of
+its life anything real begins with a
+fiction of what it could be
+imagination therefore is the most potent
+force in the universe
+in a skill you can get better at it's
+the one skill in life that benefits from
+ignoring what everybody else knows when
+crisis and disaster strike don't waste
+them no problems no progress on vacation
+go to the most remote place on your
+itinerary first bypassing the cities
+you'll maximize the shock of other nough
+sin the remote and then later you'll
+welcome the familiar comforts of a city
+on the way back when you get an
+invitation to do something in the future
+ask yourself would I accept this if it
+was scheduled for tomorrow mmm not too
+many promises will pass that immediacy
+filter don't say anything about someone
+in an email that you would not be
+comfortable saying to them directly
+because eventually they will read it if
+you desperately need a job you are just
+another problem for a boss but if you
+can solve many of the problems the boss
+has right now you are hired to be hired
+think like your boss art is in what you
+leave out acquiring things will rarely
+bring you deep satisfaction but
+acquiring experiences will rule of 7 and
+research you can find out almost
+anything if you're willing to go seven
+levels if the first source you ask
+doesn't know then you ask them who you
+should ask next and so on down the line
+if you're willing to do that to the
+seventh source you will almost always
+get your answer how to apologize quickly
+specifically sincerely don't ever
+respond to a solicitation or proposal on
+the phone the urgency is a disguise when
+someone is nasty or rude or hateful or
+mean with you pretend that they have a
+disease that makes it easier to have
+empathy towards them which can often
+soften the conflict eliminating clutter
+makes room for your true treasures you
+don't really want to be famous read the
+biography of any famous person
+experience is overrated when hiring hire
+four aptitude trained for skills most
+really amazing or great things have been
+done by people doing them for the very
+first time a vacation plus a disaster
+equals an adventure buying tools start
+with buying the absolute cheapest tools
+you can find upgrade the ones that you
+use a lot if you wind up using something
+as a tool for a job by the very best you
+can afford learn how to take a 20 minute
+power nap without embarrassment
+following your bliss is a recipe for
+paralysis if you don't know what you are
+passionate about a better motto for most
+youth is to master something anything
+through mastery of one thing you can
+drift towards extensions of that mastery
+that bring you more joy and eventually
+you'll discover where your bliss is I'm
+positive that in 100 years much of what
+I take to be true today will be proved
+to be wrong maybe even in bearer
+wrong and I try really hard to identify
+what it is that I am wrong about today
+over the long term the future is decided
+by optimist to be an optimist you don't
+have to ignore the many problems we
+create you have to imagine improving our
+capacity to solve those problems the
+universe is conspiring behind your back
+to make you a success this would be much
+easier to do if you embrace this pronoia
+thank you for listening and I hope I was
+helpful
